Fix alignment of nav dropdown

--- a/src/pretalx/static/orga/css/_layout.css
+++ b/src/pretalx/static/orga/css/_layout.css
@@ -222,8 +222,11 @@ aside.sidebar {
       transform: rotate(0);
     }
   }
-  #nav-search-wrapper .arrow {
-    display: none;
+  #nav-search-wrapper {
+    flex-direction: column;
+    .arrow {
+      display: none;
+    }
   }
 
   .nav-fold span.has-children {
@@ -293,6 +296,7 @@ aside.sidebar {
   }
   #nav-search {
     display: flex;
+    width: 100%;
     flex-direction: column;
     padding: 8px 0 8px 4px;
     display: flex;
@@ -353,6 +357,8 @@ aside.sidebar {
 
     &:after {
       display: none;
+      position: absolute;
+      left: 0;
     }
 
     .query-holder {
